IDAM 9.4.0-RC1 (#1012)